[package]
name = "vrf_dalek"
version = "0.1.0"
authors = ["iquerejeta <querejeta.azurmendi@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The implementation of version 3 of the VRF function (the one used in Cardano previous to Babbage) always unsets
# the sign bit in the elligator function. However, the exposure that curve25519-dalek offers, does not allow us to
# modify the elligator function. Therefore we rely on a fork that simply sets the bit. This fork should be only
# one commit ahead over the tag of version 3.2.0.
curve25519-dalek-fork = { package = "curve25519-dalek", git = "https://github.com/iquerejeta/curve25519-dalek", branch = "ietf03_vrf_compat_ell2", optional = true  }
curve25519-dalek = { version = "3", optional = true}
rand = "0.8"
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
hex = "0.4.2"

[features]
default = ["version09"]
version09 = ["curve25519-dalek"]
version03 = ["curve25519-dalek-fork"]
